Minor changes in offsh

--- a/build_appimage/Dockerfile
+++ b/build_appimage/Dockerfile
@@ -1,6 +1,6 @@
 FROM appimagecrafters/appimage-builder:latest
 
-RUN apt-get install -y git && \
+RUN apt-get update -y && apt-get install -y git && \
     pip3 install git+https://github.com/niess/python-appimage
 
 ADD build_offshell.sh /entrypoint.sh
